--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -4,11 +4,13 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/learn
+    username: ljm_project
+    password: dlwjdans1@
+    url: jdbc:mysql://localhost:3306/learn?useSSL=false&autoReconnect=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
 
   mvc:
     view:
-      prefix: /WEB-INF/view/
+      prefix: /WEB-INF/views/
       suffix: .jsp
 
 ### MYBATIS ###
